WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314887
[AppKit Gestures] Gesture-driven text selection drag-and-drop is often ignored
https://bugs.webkit.org/show_bug.cgi?id=314887
Summary
[AppKit Gestures] Gesture-driven text selection drag-and-drop is often ignored
Abrar Rahman Protyasha
Reported
2026-05-15 02:58:38 PDT
Gestures configurations have inherent hysteresis to disambiguate user intent. We don't need WebCore's baked-in text drag hysteresis to just help in dropping every first N mouseDragged events.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-15 02:58:43 PDT
<
rdar://problem/177152499
>
Abrar Rahman Protyasha
Comment 2
2026-05-15 03:20:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64985
EWS
Comment 3
2026-05-15 11:55:28 PDT
Committed
313322@main
(d394350544f7): <
https://commits.webkit.org/313322@main
> Reviewed commits have been landed. Closing PR #64985 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug