[AppKit Gestures] Gesture-driven text selection drag-and-drop is often ignored https://bugs.webkit.org/show_bug.cgi?id=314887 rdar://177152499

Reviewed by Wenson Hsieh.

EventHandler::handleDrag enforces a 150ms delay between mouseDown and
mouseDrag for text selection drags to help the engine figure out between
user intent -- drag or selection extension. However, automation events
do not have this ambiguity since this is solved by the AppKit gesture
controller.

Because of this unnecessary delay, we just drop the first N mosueDragged
events and end up dropping the drag on the floor. In this patch, we fix
this issue by skipping TextDragDelay when the input source is automation.

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleDrag):

Canonical link: https://commits.webkit.org/313322@main